@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-22T00:35:42Z",
-  "count" : 4,
+  "timestamp" : "2022-09-04T08:07:20Z",
+  "count" : 2,
   "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
