@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-03T16:06:24Z",
+  "timestamp" : "2022-09-04T08:07:20Z",
   "count_outdated" : 1754,
   "uniques_outdated" : 525,
-  "count" : 1785,
+  "count" : 1784,
   "uniques" : 543,
   "clones" : [
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 2, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
