@@ -1,11 +1,11 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
