@@ -1,3 +1,11 @@
+2022-09-04T08:07:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2987355862
+* notice: last 14d: unq all: 6 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 525 1754 / 543 1785
+* notice: next accum: outdated-unq outdated-all / unq all: 525 1754 / 543 1784
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-21 2022-09-04]
+
 2022-09-03T16:06:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2984999425
 * notice: last 14d: unq all: 6 31
